<resources>
    <string name="service_app_name">service</string>
    <string name="service_business_center">业务中心</string>
    <string name="service_center">服务中心</string>
    <string name="service_warehouse_center">仓储中心</string>
    <string name="service_billing_center">账单中心</string>
    <string name="service_pending">待处理</string>
    <string name="service_completed">已完成</string>
    <string name="service_distribution_order">分配单号: %1$s</string>
    <string name="service_outbound_order">出库单</string>
    <string name="service_outbound">出库</string>
    <string name="service_order_time">下单时间: %1$s</string>
    <string name="service_pending_number">待处理数: %1$s</string>
    <string name="service_complete_number">已完成数: %1$s</string>
    <string name="service_complete_number_this_year">本年度所有箱型完成总量: %1$s</string>
    <string name="service_service_distribution_order_tip">分配单号</string>
    <string name="service_order_time_tip">下单时间</string>
    <string name="service_remake">备注:</string>
    <string name="service_confirm_upload">确认上传</string>
    <string name="service_photo_delivery">图片交割</string>
    <string name="service_order_goods">订单物品</string>
    <string name="service_recycling_plan">计划量:  %1$s</string>
    <string name="service_actual_recovery">实际回收量:   %1$s</string>
    <string name="service_amount_damage">损坏量:   %1$s</string>
    <string name="service_need_time">要货时间</string>
    <string name="service_need_time_remaining">距要货剩余时间</string>
    <string name="service_demand">需求量:  %1$s</string>
    <string name="service_executed">已执行:    %1$s</string>
    <string name="service_not_performed">未执行:   %1$s</string>
    <string name="service_total_inventory">总库存: %1$s</string>
    <string name="service_available">可用:    %1$s</string>
    <string name="service_storage_order">入库单</string>
    <string name="service_storage">入库</string>
    <string name="service_out_library">出库单</string>
    <string name="service_outbound_quantity">出库量</string>
    <string name="service_distribution_time">分配时间</string>
    <string name="service_complete_date">完成日期</string>
    <string name="service_service_outbound_quantity_tip">出库量:   %1$s</string>
    <string name="service_service_storage_quantity_tip">入库量:   %1$s</string>
    <string name="service_number_delivery">出库单号:    %1$s</string>
    <string name="service_storage_number_delivery">入库单号:    %1$s</string>
    <string name="service_delivery_time">交割时间:  %1$s</string>
    <string name="service_serial">序号</string>
    <string name="service_name">名称</string>
    <string name="service_product_number">产品型号</string>
    <string name="service_quantity">数量</string>
    <string name="service_platform_scheduling">平台调度</string>
    <string name="service_scheduling_order">调拨单</string>
    <string name="service_scheduling_type">调度类型:    %1$s</string>
    <string name="service_scheduling_order_number">调度单号:    %1$s</string>
    <string name="service_complete_date_tip">完成日期:  %1$s</string>
    <string name="service_business">业务</string>
    <string name="service">服务</string>
    <string name="service_warehouse">仓储</string>
    <string name="service_billing">账单</string>
    <string name="service_me">我</string>
    <string name="service_actual_recovery_tip">实际回收量</string>
    <string name="service_amount_damage_tip">损坏量</string>
    <string name="service_no_data">暂无数据</string>
    <string name="service_order_info">订单信息</string>
    <string name="service_address">地址:  %1$s</string>
    <string name="service_contact">联系人: %1$s</string>
    <string name="service_day">天</string>
    <string name="service_input_remake">请输入备注信息</string>
    <string name="service_repair_number">待维修数:  %1$s</string>
    <string name="service_clean_number">待清洗数:  %1$s</string>
    <string name="service_cleaned">待清洗</string>
    <string name="service_repair">待维修</string>
    <string name="service_new_repair">新增报修</string>
    <string name="service_not_cleaned">未清洗数量:  %1$s</string>
    <string name="service_damage_number">损坏量:  %1$s</string>
    <string name="service_cleaned_count">清洗数</string>
    <string name="service_determine">确定</string>
    <string name="service_cancel">取消</string>
    <string name="service_repair_detail">维修详情</string>
    <string name="service_basic_info">基本信息</string>
    <string name="service_model">型号</string>
    <string name="service_order_number">服务单号</string>
    <string name="service_box_number">箱号</string>
    <string name="service_responsible_party">责任方</string>
    <string name="service_report_date">报备日期</string>
    <string name="service_edit">编辑</string>
    <string name="service_photo_upload">拍照上传</string>
    <string name="service_delete">删除</string>
    <string name="service_save">保存</string>
    <string name="service_saving">保存中</string>
    <string name="service_repair_deal_with">维修处理</string>
    <string name="service_damage_location">损坏位置:  %1$s</string>
    <string name="service_damage_location_tip">损坏位置</string>
    <string name="service_required_supplies">维修所需耗材</string>
    <string name="service_name_consumables">耗材名称</string>
    <string name="service_consumable_quantity">耗材量</string>
    <string name="service_inventory">库存量</string>
    <string name="service_repair_complete">维修完成</string>
    <string name="service_service_remake">推送备注: </string>
    <string name="service_repair_list">报修列表</string>
    <string name="service_add">新增</string>
    <string name="service_person_liable">责任人</string>
    <string name="service_select_person_liable">请选择责任人</string>
    <string name="service_repair_declaration">维修申报</string>
    <string name="service_clean">清洗</string>
    <string name="service_repair_new">维修</string>
    <string name="service_repair_total">维修总量:  %1$s</string>
    <string name="service_clean_total">清洗总量:  %1$s</string>
    <string name="service_repair_history">维修历史</string>
    <string name="service_clean_history">清洗历史</string>
    <string name="service_repair_date">维修日期</string>
    <string name="service_date">日期</string>
    <string name="service_clean_count">清洗数量</string>
    <string name="service_edit_repair">编辑报修</string>
    <string name="service_storage_total">库存总量:  %1$s</string>
    <string name="service_total_not_washed">未洗总量:  %1$s</string>
    <string name="service_not_repaired">待修总量:  %1$s</string>
    <string name="service_out_of_storage">出入库</string>
    <string name="service_product_inventory">产品库存</string>
    <string name="service_consumables_inventory">耗材库存</string>
    <string name="service_storage_detail">出入库详情</string>
    <string name="service_outstorage_type">出入库类型</string>
    <string name="service_product_count">产品数量</string>
    <string name="service_inventory_tip">库存量:  %1$s</string>
    <string name="service_available_number">可用量:  %1$s</string>
    <string name="service_cleaned_tip">待清洗:  %1$s</string>
    <string name="service_repair_tip">待维修:  %1$s</string>
    <string name="service_measuring_unit">计量单位</string>
    <string name="service_accounts_receivable">应收账</string>
    <string name="service_pending_receipt_total">%1$s月待收总金额:  ¥ %2$s</string>
    <string name="service_month_complete_total">%1$s月已完成总金额:  ¥ %2$s</string>
    <string name="service_outstanding_amount">未收金额:  %1$s</string>
    <string name="service_total_amount">总金额</string>
    <string name="service_paid_total_amount">已付总金额</string>
    <string name="service_paidan_number">派单单号</string>
</resources>
