<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:background="@color/service_color_D8F"
    android:orientation="horizontal">

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/service_serial"
        android:textColor="@color/color_333"
        android:textSize="@dimen/textSize_15" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/service_name"
        android:textColor="@color/color_333"
        android:textSize="@dimen/textSize_15" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/service_product_number"
        android:textColor="@color/color_333"
        android:textSize="@dimen/textSize_15" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/service_quantity"
        android:textColor="@color/color_333"
        android:textSize="@dimen/textSize_15" />
</LinearLayout>
